deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql
  labels:
    app: graphql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graphql
  template:
    metadata:
      labels:
        app: graphql
    spec:
      containers:
      - name: graphql
        image: kartikjalgaonkar/graphql_image:latest
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8078
        resources:
          requests:
            cpu: 400m
